<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Presentacion.inicioSesion">


    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"></include>

    <ImageView
        android:id="@+id/ivLogoLogin"
        android:layout_width="178dp"
        android:layout_height="155dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="223dp"
        android:layout_height="49dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="84dp"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/txtUsuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoLogin" />

    <EditText
        android:id="@+id/txtPsw"
        android:layout_width="222dp"
        android:layout_height="48dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="84dp"
        android:drawableLeft="@drawable/ic_action_psw"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="208dp"
        android:layout_height="51dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="88dp"
        android:background="@drawable/boton"
        android:elevation="20dp"
        android:onClick="login"
        android:text="@string/btnEntrar"
        android:textColor="@drawable/color_texto"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPsw" />

    <Button
        android:id="@+id/btnNewUser"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/boton"
        android:onClick="newUser"
        android:text="@string/btnRegistrar"
        android:textColor="@drawable/color_texto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.081" />

</android.support.constraint.ConstraintLayout>